# ngsolve-sparsesolv

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NGSOLVE_VERSION  README.md  pyproject.toml  sparsesolv_ngsolve.pyi
.github/workflows/: build-wheels.yml  ci.yml  release.yml
docs/: 01_shift_parameter.ipynb  02_performance_comparison.ipynb  03_sparsesolv_vs_ngsolve_bddc.ipynb  04_abmc_parallel_performance.ipynb  README.md  abmc_implementation_details.md  algorithms.md  api_reference.md  architecture.md  bddc_implementation_details.md  benchmarks.md  compact_ams_cocr.md  development.md  hypre_ams_implementation.md  tutorials.md
examples/hiruma/: README.md  RESULT.md  bench_ams_vs_abmc.py  bench_cocr_vs_gmres.py  bench_compact_ams.py  bench_emd_comparison.py  bench_hypre_ams.py  bench_meshsize.py  bench_parallel.py  bicgstab_solver.py  eddy_current.py  mesh1_2.5T.msh  mesh1_2.5T.msh1  mesh1_20.5T.msh  mesh1_20.5T.msh1  mesh1_21.5T_HF.msh  mesh1_21.5T_HF.msh1  mesh1_3.5T.msh  mesh1_3.5T.msh1  mesh1_4.5T.msh  mesh1_4.5T.msh1  mesh1_5.5T.msh  mesh1_5.5T.msh1  results_emd_comparison.json  results_hypre_ams.json
include/sparsesolv/: sparsesolv.hpp
include/sparsesolv/core/: abmc_ordering.hpp  constants.hpp  dense_matrix.hpp  level_schedule.hpp  parallel.hpp  preconditioner.hpp  rcm_ordering.hpp  solver_config.hpp  sparse_matrix_coo.hpp  sparse_matrix_csr.hpp  sparse_matrix_csr_builder.hpp  sparse_matrix_view.hpp  types.hpp
include/sparsesolv/direct/: pardiso_solver.hpp
include/sparsesolv/ngsolve/: sparsesolv_precond.hpp  sparsesolv_python_export.hpp  sparsesolv_solvers.hpp
include/sparsesolv/preconditioners/: bddc_preconditioner.hpp  compact_amg.hpp  compact_ams.hpp  complex_compact_ams.hpp  hypre_ams_preconditioner.hpp  hypre_boomeramg_preconditioner.hpp  ic_preconditioner.hpp  sgs_preconditioner.hpp
include/sparsesolv/solvers/: bicgstab_solver.hpp  cg_solver.hpp  cocr_solver.hpp  iterative_solver.hpp  sgs_mrtr_solver.hpp
ngsolve/: README.md  diffop_simd_stubs.cpp  python_bindings.cpp  python_module.cpp
patches/: netgen-setgeominfo.patch
scripts/: build_monolithic.py  sync_to_ngsolve.py
tests/: test_bddc.py  test_sparsesolv.py
