[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "sparsesolv-ngsolve"
version = "2.1.0"
description = "SparseSolv iterative solvers for NGSolve"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = ["ngsolve"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []

[tool.scikit-build.cmake.define]
SPARSESOLV_BUILD_NGSOLVE = "ON"
