[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "ngsolve"]
build-backend = "scikit_build_core.build"

[project]
name = "ngsolve-sparsesolv"
version = "3.0.0"
description = "NGSolve + SparseSolv: MKL build, SetGeomInfo, Compact AMS/COCR solvers"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mkl>=2024.2.0",
    "intel-cmplr-lib-rt",
    "numpy",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []

[tool.scikit-build.cmake.define]
SPARSESOLV_BUILD_NGSOLVE = "ON"
